[package]
name = "rust-rest-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9.3.0"
actix-web = "4.0" 
serde_json = "1.0.25"
mysql = "*" 
async-std = "1.12.0"
sqlx = {version = "0.7", default-features = false, features = ["runtime-async-std", "macros", "mysql", "time"]}
time = {version = "0.3.22", default-features = false, features = ["formatting", "macros"]}
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8.5"
diesel = "2.2.6"
redis = "0.21"

base64 = "0.10.1"
aes = "0.7.4"
block-modes = "0.8.1"
hex = "0.4.3"